# eureka

./: .dockerignore  .env.example  .gitignore  IMPLEMENTATION_PROMPT_EVENT_RECORDING.md  Makefile  README.md  docker-compose.legacy.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/api/: Dockerfile  Dockerfile.mycelium  README.md  mycelium-smoke.db  pyproject.toml  requirements.txt  smoke.db  smoke2.db
apps/api/app/: __init__.py  config.py  crypto_credentials.py  main.py  seed.py
apps/api/app/agents/: __init__.py  base.py  llm_client.py  orchestrator.py  registry.py
apps/api/app/agents/lanes/: __init__.py  base.py  blocked.py  complex_code.py  dispatcher.py  inquiry.py  planning.py  simple_code.py
apps/api/app/agents/ol/: __init__.py  classifier.py  prompts.py  schemas.py
apps/api/app/agents/workers/: __init__.py  codebase_analyst.py  docs_analyst.py  executor.py  jira_analyst.py  planner.py  reviewer.py  risk_safety.py  transcript_analyst.py
apps/api/app/db/: __init__.py  base.py  schema_patch.py  session.py
apps/api/app/ingestion/: __init__.py  event_ingestion.py  parsers.py  service.py  session_processor.py
apps/api/app/integrations/: __init__.py  _fakes.py  github.py  github_app.py  github_normalizer.py  github_token.py  github_webhooks.py  jira.py  jira_normalizer.py  jira_webhooks.py
apps/api/app/memory/: __init__.py  base.py  chunking.py  embeddings.py  project_data.py  retrieval.py
apps/api/app/models/: __init__.py  _mixins.py  agent_runs.py  approvals.py  audit_logs.py  credentials.py  documents.py  entities.py  executed_actions.py  github_entities.py  jira_entities.py  orchestrator_runs.py  project_chunks.py  project_events.py  projects.py  tasks.py
apps/api/app/prompts/: __init__.py  agents.py
apps/api/app/routes/: __init__.py  agent_chat.py  agents.py  chat_intel.py  credentials.py  dashboard_web.py  docker_obs.py  incoming.py  ingestion.py  ol.py  projects.py  system.py  tasks.py  webhooks.py
apps/api/app/schemas/: __init__.py  api.py  project_data.py
apps/api/app/services/: __init__.py  execution.py  github_pat_store.py  local_user_data_store.py  ol_service.py  orchestration.py  sync_service.py  watcher.py
apps/api/src/mycelium_api/: __init__.py  agent_dispatch.py  auth.py  config.py  event_bus_client.py  main.py  supabase_client.py
apps/api/src/mycelium_api/routers/: agent_chat.py  agents.py  chat.py  chat_intel.py  dashboard_web.py  docker_obs.py  graph.py  health.py  integrations.py  observability.py  workflows.py
apps/api/src/mycelium_api/workers/: agent_results.py  events_ingestor.py
apps/api/tests/: conftest.py
apps/api/tests/api/: test_auth.py  test_chat_and_agents.py
apps/api/tests/unit/: test_agent_dispatch.py  test_agent_results_worker.py  test_agent_transitions.py  test_correlation.py
apps/frontend/: Dockerfile  README.md  index.html  package.json  tsconfig.json  vitest.config.ts
apps/web/: Dockerfile  next.config.mjs  package-lock.json  package.json  (+2 more)
docs/: architecture.md  contracts.md  data-flow.md
mycelium/: package-lock.json  package.json
services/agent-runtime/: Dockerfile  README.md  pyproject.toml
services/agent-runtime/src/mycelium_agent_runtime/: __init__.py  approvals.py  learning_client.py  longterm.py  main.py  memory.py  worker.py
services/agent-runtime/src/mycelium_agent_runtime/actions/: __init__.py  executor.py  types.py
services/agent-runtime/src/mycelium_agent_runtime/agents/: __init__.py  catalog.py
services/agent-runtime/src/mycelium_agent_runtime/execution/: __init__.py  backend.py  local.py  openclaw.py  result.py
services/agent-runtime/src/mycelium_agent_runtime/llm/: __init__.py  claude.py
services/agent-runtime/src/mycelium_agent_runtime/permissions/: __init__.py  defaults.py  guard.py  rules.py
services/agent-runtime/src/mycelium_agent_runtime/skills/: __init__.py  base.py  file_ops.py  git.py  project_orchestrator.py  reasoning.py  search.py  shell.py
services/agent-runtime/tests/: test_worker_user_id.py
services/integrations/: Dockerfile  README.md  pyproject.toml
services/integrations/src/mycelium_integrations/: __init__.py  main.py  scheduler.py  sync_state.py
services/integrations/src/mycelium_integrations/connectors/: __init__.py  _base.py  github.py  jira.py  slack.py
services/knowledge/: Dockerfile  README.md  pyproject.toml
services/knowledge/src/mycelium_knowledge/: __init__.py  main.py
services/knowledge/src/mycelium_knowledge/code_index/: __init__.py  routes.py
services/knowledge/src/mycelium_knowledge/embeddings/: __init__.py  search.py  worker.py
services/knowledge/src/mycelium_knowledge/graph/: __init__.py  ingest_worker.py  routes.py  store.py
services/knowledge/src/mycelium_knowledge/onboarding/: __init__.py  routes.py
services/learning/: Dockerfile  README.md  pyproject.toml
services/learning/src/mycelium_learning/: __init__.py  config.py  main.py  trainer.py  workers.py
services/learning/src/mycelium_learning/api/: __init__.py  preferences.py  recommendations.py  signals.py
services/learning/src/mycelium_learning/backends/: __init__.py  base.py  local.py  openclaw.py
services/learning/src/mycelium_learning/models/: __init__.py  base.py  patterns.py  permissions.py  skills.py  store.py
services/learning/src/mycelium_learning/signals/: __init__.py  buffer.py  collector.py  types.py
services/learning/tests/: test_signal_buffer.py  test_signals.py
services/observer/: README.md  main.py  pyproject.toml
services/observer/src/mycelium_observer/: __init__.py  main.py  privacy.py
services/process-intel/: Dockerfile  README.md  pyproject.toml
services/process-intel/src/mycelium_process_intel/: __init__.py  discovery.py  main.py
services/security/: Dockerfile  README.md  pyproject.toml
services/security/src/mycelium_security/: __init__.py  main.py
services/security/src/mycelium_security/classification/: __init__.py  worker.py
supabase/: schema.sql  schema_auto_cleanup.sql  schema_conversations.sql  schema_fix_fk.sql  schema_logout_cleanup.sql  schema_team_fix.sql
(+123 files in other folders)
