[tool.poetry]
name = "mycelium-api"
version = "0.1.0"
description = "Mycelium API gateway."
authors = ["Mycelium <dev@mycelium.local>"]
readme = "README.md"
packages = [{ include = "mycelium_api", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
httpx = "^0.27.0"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
prometheus-client = "^0.20.0"
mycelium-shared-types = { path = "../../packages/shared-types/python", develop = true }
mycelium-event-bus = { path = "../../packages/event-bus/python", develop = true }
mycelium-db = { path = "../../packages/db/python", develop = true }
mycelium-security-filter = { path = "../../packages/security-filter/python", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
