[tool.poetry]
name = "mycelium-process-intel"
version = "0.1.0"
description = "pm4py-based process mining over Postgres events."
authors = ["Mycelium <dev@mycelium.local>"]
readme = "README.md"
packages = [{ include = "mycelium_process_intel", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
mycelium-shared-types = { path = "../../packages/shared-types/python", develop = true }
mycelium-event-bus = { path = "../../packages/event-bus/python", develop = true }
mycelium-db = { path = "../../packages/db/python", develop = true }
# pm4py is large; install lazily inside the container.

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
